--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,56 @@
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans:700|Roboto");
 .App {
-  min-height: 2500px; }
+  min-height: 2500px;
+  background-image: linear-gradient(#61d5da, #93d3d6); }
 
 .name {
-  font-family: Noto Sans, Roboto;
+  font-family: "Noto Sans", sans-serif;
+  color: #ffffff;
   margin-top: 1em;
   font-size: 4em; }
 
 .contactInfo {
-  font-family: Roboto, Noto Sans; }
+  font-family: "Roboto", sans-serif;
+  color: #ffffff; }
 
 .App-intro {
   font-size: large; }
+
+.navbar {
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  height: 64px;
+  width: 100%;
+  background-color: #61d5da; }
+
+.logo {
+  width: 50px;
+  margin-top: 10px;
+  margin-left: 10px; }
+
+.burger {
+  position: fixed;
+  top: 10px;
+  right: 10px; }
+  .burger span {
+    display: block;
+    height: 5px;
+    width: 30px;
+    background-color: #ffffff;
+    border-radius: 100px; }
+    .burger span:nth-child(-n+3) {
+      margin-bottom: 5px; }
+
+.nav-links {
+  margin-top: 50px;
+  margin-right: 10px;
+  height: 100%;
+  background-color: #ffffff; }
+  .nav-links .link {
+    font-family: "Roboto", sans-serif;
+    color: #61d5da; }
+    .nav-links .link:nth-child(-n+5) {
+      margin-bottom: 10px; }
