--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,4 +3,4 @@
 $main-font: 'Noto Sans', sans-serif;
 $content-font: 'Roboto', sans-serif;
 $main-color: #ffffff;
-$background-color: rgb(97, 213, 218);
+$content-color: rgb(97, 213, 218);
