--- a/sass/app.scss
+++ b/sass/app.scss
@@ -6,12 +6,14 @@
     font-family: $main-font;
     color: $main-color;
     padding-top: 100px;
+    margin-left: 10px;
     width: 50px;
     font-size: 40px;
 }
 .contactInfo{
     font-family: $content-font;
     color: $main-color;
+    margin-left: 10px;
     font-size: 15px;
 }
 .App-intro{
