--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -12,7 +12,16 @@
     padding: 10px 10px 0;
     background-color: $content-color;
 }
+.mobile-site{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 50;
+}
 .logo{
+    position: fixed;
     width: 50px;
     height: 50px;
 }
@@ -20,9 +29,10 @@
     position: fixed;
     top: 0;
     right: 0;
-    width: 100px;
+    width: 1px;
     height: 100vh;
     align-items: center;
+    z-index: 100;
     &.slideIn{
         // right: 10px;
         // position: absolute;
@@ -32,9 +42,12 @@
         background-color: $main-color;
         transition: all 0.5s;
     }
+    &.slideOut{
+        transition: all 0.5s;
+    }
 }
 .burger{
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
     // z-index: 300;
@@ -44,16 +57,35 @@
         width: 30px;
         background-color: $main-color;
         border-radius: 100px;
+        // &:first-child{
+        //     transform-origin: 0 50%;
+        // }
         &:nth-child(-n+3){
             margin-bottom: 5px;
         }
     }
     &.active{
-        // position: absolute;
-        // top: 10px;
-        // right: 10px;
         span{
             background-color: $content-color;
+            transition: 0.5s;
+            &:first-child{
+                transform: rotate(-45deg) translate(0, 10px);
+                width: 35px;
+            }
+            &:nth-child(2){
+                // background-color: $main-color;
+                display: none;
+            }
+            &:last-child{
+                margin-top: 10px;
+                transform: rotate(45deg) translate(0, -10px);
+                width: 35px;
+            }
+        }
+    }
+    &.inactive{
+        span{
+            transition: 0.5s;
         }
     }
 }
@@ -68,7 +100,8 @@
     .link{
         font-family: $content-font;
         color: $content-color;
-        font-weight: bold;
+        font-weight: 700;
+        width: 70px;
         &:nth-child(-n+5){
             margin-bottom: 25px;
         }
