--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,16 @@
   padding: 10px 10px 0;
   background-color: #61d5da; }
 
+.mobile-site {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 50; }
+
 .logo {
+  position: fixed;
   width: 50px;
   height: 50px; }
 
@@ -39,16 +48,19 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 100px;
+  width: 1px;
   height: 100vh;
-  align-items: center; }
+  align-items: center;
+  z-index: 100; }
   .burger-menu.slideIn {
     width: 150px;
     background-color: #ffffff;
     transition: all 0.5s; }
+  .burger-menu.slideOut {
+    transition: all 0.5s; }
 
 .burger {
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px; }
   .burger span {
@@ -60,7 +72,19 @@
     .burger span:nth-child(-n+3) {
       margin-bottom: 5px; }
   .burger.active span {
-    background-color: #61d5da; }
+    background-color: #61d5da;
+    transition: 0.5s; }
+    .burger.active span:first-child {
+      transform: rotate(-45deg) translate(0, 10px);
+      width: 35px; }
+    .burger.active span:nth-child(2) {
+      display: none; }
+    .burger.active span:last-child {
+      margin-top: 10px;
+      transform: rotate(45deg) translate(0, -10px);
+      width: 35px; }
+  .burger.inactive span {
+    transition: 0.5s; }
 
 .nav-links {
   display: flex;
@@ -72,6 +96,7 @@
   .nav-links .link {
     font-family: "Roboto", sans-serif;
     color: #61d5da;
-    font-weight: bold; }
+    font-weight: 700;
+    width: 70px; }
     .nav-links .link:nth-child(-n+5) {
       margin-bottom: 25px; }
