--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -5,12 +5,13 @@
     top: 0;
     left: 0;
     width: 95%;
-    height: 50px;
+    height: 35px;
     // margin-top: 10px;
     // margin-left: 10px;
     // margin-right: 10px;
     padding: 10px 10px 0;
     background-color: $content-color;
+    z-index: 100;
 }
 .mobile-site{
     position: fixed;
@@ -18,7 +19,7 @@
     right: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 50;
+    // z-index: 400;
 }
 .logo{
     position: fixed;
@@ -32,7 +33,7 @@
     width: 1px;
     height: 100vh;
     align-items: center;
-    z-index: 100;
+    z-index: 300;
     &.slideIn{
         // right: 10px;
         // position: absolute;
