--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -2,5 +2,6 @@
 
 $main-font: 'Noto Sans', sans-serif;
 $content-font: 'Roboto', sans-serif;
-$main-color: #ffffff;
-$content-color: rgb(97, 213, 218);
+$main-color:rgb(237, 253, 255);
+$second-color: rgb(97, 213, 218);
+$content-color:rgb(66, 144, 147);
