--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,6 @@
 .App{
     position: relative;
-    min-height: 3000px;
-    // background-image: linear-gradient(rgb(97, 213, 218), rgb(147, 211, 214));
+    min-height: 5000px;
+    // background: black;
     z-index: 1;
 }
