--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -2,15 +2,15 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 45px;
-    padding-top: 100px;
+    // margin-top: 45px;
     // margin-left: 5px;
+    padding-top: 150px;
     width: 100%;
     background: $content-color;
-    z-index: 5;
+    z-index: 1;
     @include break(mobile){
-        height: 20em;
-        clip-path: polygon(50% 100%, 100% 80%, 100% 0, 0 0, 0 80%);
+        height: 25em;
+        clip-path: polygon(50% 0, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
     }
 }
 .contact{
