--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -42,6 +42,7 @@
         width: 150px;
         background-color: $main-color;
         transition: all 0.5s;
+        box-shadow: -5px 0px 150px -30px #484848
     }
     &.slideOut{
         transition: all 0.5s;
