--- a/sass/skills.scss
+++ b/sass/skills.scss
@@ -1,8 +1,59 @@
 .skills{
+    position: relative;
+    padding-top: 150px;
+    margin-top: -85px;
+    width: 100%;
+    z-index: 1;
     background: $content-color;
-    z-index: -1;
     @include break(mobile){
-        height: 20em;
-        clip-path: polygon(50% 100%, 100% 80%, 100% 0, 0 0, 0 80%);
+        height: 25em;
+        clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+    }
+}
+.whiteTitle{
+    margin: 0 20px;
+    position: relative;
+    font-family: $main-font;
+    color: $main-color;
+    font-size: 25px;
+    &.skill{
+        margin-top: -50px;
+        margin-bottom: 10px;
+    }
+}
+.iconSection{
+    @include break(mobile){
+        display: grid;
+        grid: auto-flow / repeat(auto-fill, minmax(100px, 1fr));
+        grid-gap: 20px;
+    }
+    // @include break(mobile){
+    //     display: flex;
+    //     flex-wrap: wrap;
+    //     justify-content: space-evenly;
+    // }
+}
+.oneSkill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include break(mobile){
+        margin: 5px;
+    }
+}
+.skillIcon{
+    @include break(mobile){
+        width: 50px;
+        height: 50px;
+        // margin-left: 20px
+    }
+}
+.smallTitle{
+    font-family: $content-font;
+    color: $main-color;
+    text-align: center;
+    @include break(mobile){
+        font-size: 15px;
+        margin: 5px;
     }
 }
