added content in experience with no minimum style

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -1,16 +1,17 @@
-.about{
+.background{
     position: relative;
     padding-top: 150px;
     margin-top: -85px;
     width: 100%;
-    z-index: 1;
-    background: $main-color;
+    &.whiteBack{
+        background: $main-color;
+    }
     @include break(mobile){
         height: 25em;
         clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
     }
 }
-.aboutText{
+.content{
     margin: 0 20px;
 }
 .blueTitle{
