--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,6 @@
 .App{
     position: relative;
-    min-height: 5000px;
-    // background: black;
+    min-height: 4000px;
+    background: black;
     z-index: 1;
 }
