--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -1,4 +1,4 @@
-.landing{
+.landBackground{
     display: flex;
     flex-direction: column;
     position: relative;
@@ -7,7 +7,7 @@
     padding-top: 150px;
     width: 100%;
     background: $content-color;
-    z-index: 1;
+    // z-index: 1;
     @include break(mobile){
         height: 25em;
         clip-path: polygon(50% 0, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
