--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans:700|Roboto");
 .App {
   position: relative;
-  min-height: 5000px;
+  min-height: 4000px;
+  background: black;
   z-index: 1; }
 
 .mobile-nav {
@@ -83,16 +84,15 @@
     .nav-links .link:nth-child(-n+5) {
       margin-bottom: 25px; }
 
-.landing {
+.landBackground {
   display: flex;
   flex-direction: column;
   position: relative;
   padding-top: 150px;
   width: 100%;
-  background: #429093;
-  z-index: 1; }
+  background: #429093; }
   @media (max-width: 37.5em) {
-    .landing {
+    .landBackground {
       height: 25em;
       clip-path: polygon(50% 0, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); } }
 
@@ -129,19 +129,19 @@
       width: 150px;
       height: auto; } }
 
-.about {
+.background {
   position: relative;
   padding-top: 150px;
   margin-top: -85px;
-  width: 100%;
-  z-index: 1;
-  background: #edfdff; }
+  width: 100%; }
+  .background.whiteBack {
+    background: #edfdff; }
   @media (max-width: 37.5em) {
-    .about {
+    .background {
       height: 25em;
       clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); } }
 
-.aboutText {
+.content {
   margin: 0 20px; }
 
 .blueTitle {
@@ -161,27 +161,16 @@
     .smallContent {
       font-size: 15px; } }
 
-.skills {
-  position: relative;
-  padding-top: 150px;
-  margin-top: -85px;
-  width: 100%;
-  z-index: 1;
+.blueBack {
   background: #429093; }
-  @media (max-width: 37.5em) {
-    .skills {
-      height: 25em;
-      clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); } }
 
 .whiteTitle {
-  margin: 0 20px;
   position: relative;
   font-family: "Noto Sans", sans-serif;
   color: #edfdff;
   font-size: 25px; }
   .whiteTitle.skill {
-    margin-top: -50px;
-    margin-bottom: 10px; }
+    margin: -50px 20px 10px; }
 
 @media (max-width: 37.5em) {
   .iconSection {
@@ -211,22 +200,14 @@
       font-size: 15px;
       margin: 5px; } }
 
-.projects {
-  position: relative;
-  padding-top: 150px;
-  margin-top: -85px;
-  width: 100%;
-  z-index: 1;
-  background: #edfdff; }
-  @media (max-width: 37.5em) {
-    .projects {
-      height: 25em;
-      clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0); } }
+@media (max-width: 37.5em) {
+  .project {
+    margin-top: -50px; } }
 
 .projectName {
   font-size: 15px; }
 
-.used {
+.blueText {
   color: #429093; }
 
 @media (max-width: 37.5em) {
@@ -241,3 +222,6 @@
   .imgSection .images {
     width: 300px;
     height: auto; } }
+
+.whiteText {
+  color: #edfdff; }
