--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -7,19 +7,31 @@
     padding-top: 150px;
     width: 100%;
     background: $content-color;
-    // z-index: 1;
-    @include break(mobile){
-        height: 25em;
-        clip-path: polygon(50% 0, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+    height: 25em;
+    // z-index: 5;
+    clip-path: polygon(50% 0, 100% 0, 100% 90%, 50% 100%, 0 90%, 0 0);
+    @include break(laptop){
+        flex-direction: row;
+        justify-content: center;
     }
 }
 .contact{
-    @include break(mobile){
-        position: relative;
-        margin-left: 20px;
-        // display: flex;
-        // flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: 0 20px;
+    @include break(tablet){
+        margin: 0 70px;
     }
+    @include break(laptop){
+        margin: unset;
+        height: 250px;
+        justify-content: center;
+        margin-left: 30px;
+    }
+    // @include break(desktop){
+    //     margin: 0 170px;
+    // }
 }
 .name{
     font-family: $main-font;
@@ -27,32 +39,56 @@
     // padding-top: 100px;
     // margin-left: 10px;
     // width: 50px;
-    font-size: 40px;
+    font-size: 50px;
+}
+.digits{
+    display: flex;
+    flex-direction: column;
+    @include break(desktop){
+        flex-direction: row;
+        margin-top: 5px;
+    }
 }
 .contactInfo{
     text-decoration: none;
     font-family: $content-font;
     color: $main-color;
+    font-size: 20px;
+    cursor: pointer;
     // margin-left: 10px;
-    @include break(mobile){
-        display: flex;
-        flex-direction: column;
-        font-size: 15px;
+    &.number{
+        width: 140px;
+    }
+    &.divider{
+        display: none;
+        @include break(desktop){
+            display: block;
+            margin: 0 10px;
+        }
+    }
+    &.email{
+        width: 270px;
     }
 }
 .headshot{
-    position: absolute;
-    margin-left: 180px;
-    margin-top: -20px;
+    position: relative;
+    // position: absolute;
+    margin: 0 20px;
     border-radius: 50%;
+    width: 150px;
+    height: auto;
     // border: 3px solid $main-color;
     // clip-path: circle(50.0% at 50% 50%);
-    @include break(mobile){
-        position: relative;
-        margin-left: 20px;
-        margin-top: 0;
-        // clip-path: circle(45.0% at 50% 45%);
-        width: 150px;
-        height: auto;
+    @include break(tablet){
+        margin: 0 70px;
     }
+    @include break(laptop){
+        margin: unset;
+        // margin-left: 180px;
+        width: 250px;
+        height: 250px;
+    }
+    // @include break(desktop){
+    //     margin: 0 170px;
+    // }
 }
