--- a/sass/about.scss
+++ b/sass/about.scss
@@ -1,35 +1,50 @@
 .background{
     position: relative;
-    padding-top: 150px;
-    margin-top: -85px;
+    padding-top: 100px;
+    margin-top: -75px;
     width: 100%;
-    &.whiteBack{
-        background: $main-color;
-    }
-    @include break(mobile){
-        height: 25em;
-        clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
-    }
+    height: 25em;
+    clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+    // @include break(mobile){
+    //     clip-path: polygon(50% 15%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+    // }
 }
 .content{
     margin: 0 20px;
+    @include break(tablet){
+        margin: 0 70px;
+    }
+    @include break(laptop){
+        margin: 0 120px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    // @include break(desktop){
+    //     margin: 0 170px;
+    // }
 }
-.blueTitle{
-    position: relative;
-    font-family: $main-font;
-    color: $content-color;
-    font-size: 25px;
-    &.aboutMe{
-        @include break(mobile){
-            margin-top: 50px;
-        }
+.aboutMe{
+    margin-top: 50px;
+    @include break(tablet){
+        margin-top: 100px;
     }
 }
 .smallContent{
     position: relative;
     font-family: $content-font;
     color: $content-color;
-    @include break(mobile){
-        font-size: 15px;
+    font-size: 15px;
+    line-height: 20px;
+    margin-top: 10px;
+    @include break(laptop){
+        font-size: 20px;
+        // width: 90%;
+        line-height: 25px;
+    }
+    &.paragraph{
+        @include break(laptop){
+            width: 80%;
+        }
     }
 }
