--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -1,10 +1,10 @@
-.mobile-nav{
+.nav{
     display: flex;
     position: fixed;
-    justify-content: space-between;
+    // justify-content: space-between;
     top: 0;
     left: 0;
-    width: 95%;
+    width: 100%;
     height: 35px;
     // margin-top: 10px;
     // margin-left: 10px;
@@ -12,6 +12,10 @@
     padding: 10px 10px 0;
     background-color: $content-color;
     z-index: 100;
+    @include break(laptop){
+        height: 60px;
+        // align-content: center;
+    }
 }
 .mobile-site{
     position: fixed;
@@ -23,8 +27,14 @@
 }
 .logo{
     position: fixed;
-    width: 50px;
-    height: 50px;
+    top: 10px;
+    left: 10px;
+    width: 30px;
+    height: auto;
+    border-radius: 20%;
+    @include break(laptop){
+        width: 50px;
+    }
 }
 .burger-menu{
     position: fixed;
@@ -53,6 +63,9 @@
     top: 10px;
     right: 10px;
     // z-index: 300;
+    @include break(laptop){
+        display: none;
+    }
     span{
         display: block;
         height: 5px;
@@ -90,18 +103,33 @@
 .nav-links{
     display: flex;
     flex-direction: column;
-    margin-top: 80px;
-    margin-left: 35px;
-    &.noDisplay{
-        display: none;
-    }
-    .link{
-        font-family: $content-font;
-        color: $content-color;
-        font-weight: 700;
-        width: 70px;
+    margin: 80px 40px 0;
+    // margin-top: 80px;
+    // margin-left: 35px;
+    // &.noDisplay{
+        //     display: none;
+        // }
+        @include break(laptop){
+            flex-direction: row;
+            justify-content: space-around;
+            position: fixed;
+            right: 0;
+            margin-top: 25px;
+        }
+        .link{
+            font-family: $content-font;
+            color: $content-color;
+            font-weight: 700;
+            width: 70px;
+            cursor: pointer;
         &:nth-child(-n+5){
             margin-bottom: 25px;
+            @include break(laptop){
+                color: $main-color;
+                margin-bottom: 0px;
+                margin-right: 30px;
+                width: fit-content;
+            }
         }
     }
 }
