--- a/sass/skills.scss
+++ b/sass/skills.scss
@@ -1,23 +1,28 @@
-.blueBack{
-    background: $content-color;
-}
-.whiteTitle{
-    // margin: 0 20px;
-    position: relative;
-    font-family: $main-font;
-    color: $main-color;
-    font-size: 25px;
-    &.skill{
-        margin: -50px 20px 10px;
-        // margin-top: -50px;
-        // margin-bottom: 10px;
+.skill{
+    margin: 0 20px 10px;
+    // margin-top: -50px;
+    // margin-bottom: 10px;
+    @include break(tablet){
+        margin: 0 70px 10px;
     }
+    @include break(laptop){
+        margin: 30px 0 0;
+        display: flex;
+        justify-content: center;
+    }
+    // @include break(desktop){
+    //     margin: 0 170px 50px;
+    // }
 }
 .iconSection{
-    @include break(mobile){
-        display: grid;
-        grid: auto-flow / repeat(auto-fill, minmax(100px, 1fr));
-        grid-gap: 20px;
+    display: grid;
+    grid: repeat(3, 1fr) / repeat(3, 1fr);
+    grid-gap: 10px;
+    @include break(laptop){
+        display: flex;
+        justify-content: space-evenly;
+        width: 90%;
+        margin: 50px auto;
     }
     // @include break(mobile){
     //     display: flex;
@@ -29,23 +34,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    @include break(mobile){
-        margin: 5px;
-    }
 }
 .skillIcon{
-    @include break(mobile){
-        width: 50px;
-        height: 50px;
-        // margin-left: 20px
-    }
-}
-.smallTitle{
-    font-family: $content-font;
-    color: $main-color;
-    text-align: center;
-    @include break(mobile){
-        font-size: 15px;
-        margin: 5px;
-    }
+    width: 50px;
+    height: 50px;
 }
