slight change to contact on landing

--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -58,6 +58,7 @@
     // margin-left: 10px;
     &.number{
         width: 140px;
+        margin: 5px 0;
     }
     &.divider{
         display: none;
