--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,8 @@
   font-size: 20px;
   cursor: pointer; }
   .contactInfo.number {
-    width: 140px; }
+    width: 140px;
+    margin: 5px 0; }
   .contactInfo.divider {
     display: none; }
     @media (min-width: 65em) {
